Google Maps dan Unit Test
Google Maps:
-Terdapat styling
-Terdapat izin gps
-Terdapat auto melihat marker2 yang berkumpul

Unit Testing:
-Penyesuaian dengan JDK 21
-Dapat dilihat dengan versi Mockito menggunakan versi 5 ke atas, kemudian terdapat penyesuaian testOption pada gradle apps.
-Jika tidak dilakukan, maka akan error.
-Pastikan pula pemanggilan argumen pada unit test dan view model sudah sesuai.

Selebihnya perbaikan kecil.